--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
